arreglando with code

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         Todo empezó cuando estuve estudiando Matemática en la Universidad Nacional Mayor de San Marcos, habian muchos cursos en la carrera pero por los que senti mucha pasión fueron los que incluían programación. Me empecé a interesar muchísimo en el código porque plasmando mi lógica en código descubrí que podía resolver cualquier problema.
                       </span>
                       <span class="english">
-                        Everything started when I was studying Math at the University of San Marcos, there were a lot of courses but the courses with which I felt passionate were Programming 1 and 2. I started to felt so passionate about code because by building my logic in code I discovered that I could solve any problem with code.
+                        Everything started when I was studying Math at the University of San Marcos, there were a lot of courses but the courses with which I felt passionate were Programming 1 and 2. I started to felt so passionate about code because by building my logic in code I discovered that I could solve any problem with it.
                       </span>
                     </p>
                   </div>
