--- a/index.html
+++ b/index.html
@@ -553,11 +553,15 @@
                   </div>
                 </div>
 
-                <div class="spanish col-lg-12 text-center">
-                  <button id="downloadResumeSPA" class="btn btn-primary btn-xl text-uppercase">Descarga mi CV</button>
-                </div>
                 <div class="english col-lg-12 text-center">
-                  <button id="downloadResumeEN" class="btn btn-primary btn-xl text-uppercase">Download my resume</button>
+                  <a href="https://drive.google.com/a/unmsm.edu.pe/uc?authuser=0&id=1Ws-cQxImhzhybePwu8pWVei-7eMQma3M&export=download" target="_blank">
+                    <button id="downloadResumeEN" class="btn btn-primary btn-xl text-uppercase">Download my resume</button>
+                  </a>
+                </div>
+                <div class="spanish col-lg-12 text-center">
+                  <a href="https://drive.google.com/a/unmsm.edu.pe/uc?authuser=0&id=1GyXYxSEWu9n-TFwcIDH3CyZ3-03-SB9q&export=download" target="_blank">
+                    <button id="downloadResumeSPA" class="btn btn-primary btn-xl text-uppercase">Descarga mi CV</button>
+                  </a>
                 </div>
               </div>
           </div>
