--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <div class="navbar-brand js-scroll-trigger">
-          <a href="#page-top" id="myName">Fiorella Effio</a>
-          <input type="checkbox" id="toogle" /><label for="toogle" id="seeToogle"></label>
+          <a href="#page-top" id="myName" >Fiorella Effio</a>
+          <div id="divToggle">
+            <input type="checkbox" id="toogle" /><label for="toogle" id="seeToogle"></label>
+          </div>
         </div>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
